--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a sales rep at Gusto. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Arvada, CO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video games, soccer, and drawing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To work in company that is both technical and creative.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Westminster, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn more hard skills that will help me pursue a career where I can utilize these skills to help make a large impact in the company.</p>
     </section>
 
     <footer id="footer">
